compile/src/antlr/CompileParser.java
// Generated from C:/Users/lenovo/IdeaProjects/compile/src/antlr\Compile.g4 by ANTLR 4.9
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CompileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMPIL=1, INT=2, FLOAT=3, STRING=4, SCAN=5, PRINT=6, START=7, IF=8, THEN=9, 
		ELSE=10, DO=11, WHILE=12, AFF=13, PLUS=14, MINUS=15, MUL=16, DIV=17, SUP=18, 
		INF=19, SUPE=20, INFE=21, EQ=22, DIF=23, PARO=24, PARF=25, ACODO=26, ACODF=27, 
		PV=28, VER=29, ID=30, INTEGERVAL=31, FLOATVAL=32, STR=33, WS=34, COMMENTAIRE1=35, 
		COMMENTAIRE2=36;
	public static final int
		RULE_prg = 0, RULE_list_declaration = 1, RULE_dec = 2, RULE_type = 3, 
		RULE_list_variable = 4, RULE_id = 5, RULE_list_instruction = 6, RULE_inst = 7, 
		RULE_affect = 8, RULE_exp = 9, RULE_exp_prio = 10, RULE_plusmoin = 11, 
		RULE_muldiv = 12, RULE_suit_exp = 13, RULE_val = 14, RULE_instif = 15, 
		RULE_el = 16, RULE_condition = 17, RULE_op_logique = 18, RULE_dowhile = 19, 
		RULE_scan = 20, RULE_print = 21, RULE_listID = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"prg", "list_declaration", "dec", "type", "list_variable", "id", "list_instruction", 
			"inst", "affect", "exp", "exp_prio", "plusmoin", "muldiv", "suit_exp", 
			"val", "instif", "el", "condition", "op_logique", "dowhile", "scan", 
			"print", "listID"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'compil'", "'intCompil'", "'floatCompil'", "'stringCompil'", "'scancompil'", 
			"'printcompil'", "'start'", "'if'", "'then'", "'else'", "'do'", "'while'", 
			"'='", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'>='", "'<='", "'=='", 
			"'!='", "'('", "')'", "'{'", "'}'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMPIL", "INT", "FLOAT", "STRING", "SCAN", "PRINT", "START", "IF", 
			"THEN", "ELSE", "DO", "WHILE", "AFF", "PLUS", "MINUS", "MUL", "DIV", 
			"SUP", "INF", "SUPE", "INFE", "EQ", "DIF", "PARO", "PARF", "ACODO", "ACODF", 
			"PV", "VER", "ID", "INTEGERVAL", "FLOATVAL", "STR", "WS", "COMMENTAIRE1", 
			"COMMENTAIRE2"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Compile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CompileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrgContext extends ParserRuleContext {
		public TerminalNode COMPIL() { return getToken(CompileParser.COMPIL, 0); }
		public TerminalNode ID() { return getToken(CompileParser.ID, 0); }
		public TerminalNode PARO() { return getToken(CompileParser.PARO, 0); }
		public TerminalNode PARF() { return getToken(CompileParser.PARF, 0); }
		public TerminalNode ACODO() { return getToken(CompileParser.ACODO, 0); }
		public List_declarationContext list_declaration() {
			return getRuleContext(List_declarationContext.class,0);
		}
		public TerminalNode START() { return getToken(CompileParser.START, 0); }
		public List_instructionContext list_instruction() {
			return getRuleContext(List_instructionContext.class,0);
		}
		public TerminalNode ACODF() { return getToken(CompileParser.ACODF, 0); }
		public TerminalNode EOF() { return getToken(CompileParser.EOF, 0); }
		public PrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterPrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitPrg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitPrg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrgContext prg() throws RecognitionException {
		PrgContext _localctx = new PrgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(COMPIL);
			setState(47);
			match(ID);
			setState(48);
			match(PARO);
			setState(49);
			match(PARF);
			setState(50);
			match(ACODO);
			setState(51);
			list_declaration();
			setState(52);
			match(START);
			setState(53);
			list_instruction();
			setState(54);
			match(ACODF);
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_declarationContext extends ParserRuleContext {
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public List_declarationContext list_declaration() {
			return getRuleContext(List_declarationContext.class,0);
		}
		public List_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterList_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitList_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitList_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_declarationContext list_declaration() throws RecognitionException {
		List_declarationContext _localctx = new List_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_list_declaration);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(57);
				dec();
				setState(58);
				list_declaration();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				dec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List_variableContext list_variable() {
			return getRuleContext(List_variableContext.class,0);
		}
		public TerminalNode PV() { return getToken(CompileParser.PV, 0); }
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			type();
			setState(64);
			list_variable();
			setState(65);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(CompileParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(CompileParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(CompileParser.STRING, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_variableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompileParser.ID, 0); }
		public TerminalNode VER() { return getToken(CompileParser.VER, 0); }
		public List_variableContext list_variable() {
			return getRuleContext(List_variableContext.class,0);
		}
		public List_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterList_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitList_variable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitList_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_variableContext list_variable() throws RecognitionException {
		List_variableContext _localctx = new List_variableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				{
				setState(69);
				match(ID);
				setState(70);
				match(VER);
				setState(71);
				list_variable();
				}
				}
				break;
			case 2:
				{
				setState(72);
				match(ID);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompileParser.ID, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_instructionContext extends ParserRuleContext {
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public List_instructionContext list_instruction() {
			return getRuleContext(List_instructionContext.class,0);
		}
		public List_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterList_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitList_instruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitList_instruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_instructionContext list_instruction() throws RecognitionException {
		List_instructionContext _localctx = new List_instructionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list_instruction);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SCAN:
			case PRINT:
			case IF:
			case DO:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				inst();
				setState(78);
				list_instruction();
				}
				break;
			case ACODF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public AffectContext affect() {
			return getRuleContext(AffectContext.class,0);
		}
		public InstifContext instif() {
			return getRuleContext(InstifContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ScanContext scan() {
			return getRuleContext(ScanContext.class,0);
		}
		public DowhileContext dowhile() {
			return getRuleContext(DowhileContext.class,0);
		}
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitInst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inst);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				affect();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				instif();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				print();
				}
				break;
			case SCAN:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				scan();
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				dowhile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode AFF() { return getToken(CompileParser.AFF, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode PV() { return getToken(CompileParser.PV, 0); }
		public AffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterAffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitAffect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitAffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectContext affect() throws RecognitionException {
		AffectContext _localctx = new AffectContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_affect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			id();
			setState(91);
			match(AFF);
			setState(92);
			exp(0);
			setState(93);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public Exp_prioContext exp_prio() {
			return getRuleContext(Exp_prioContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public PlusmoinContext plusmoin() {
			return getRuleContext(PlusmoinContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_exp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(96);
			exp_prio(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_exp);
					setState(98);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(99);
					plusmoin();
					setState(100);
					exp_prio(0);
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Exp_prioContext extends ParserRuleContext {
		public Suit_expContext suit_exp() {
			return getRuleContext(Suit_expContext.class,0);
		}
		public Exp_prioContext exp_prio() {
			return getRuleContext(Exp_prioContext.class,0);
		}
		public MuldivContext muldiv() {
			return getRuleContext(MuldivContext.class,0);
		}
		public Exp_prioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_prio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterExp_prio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitExp_prio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitExp_prio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Exp_prioContext exp_prio() throws RecognitionException {
		return exp_prio(0);
	}

	private Exp_prioContext exp_prio(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Exp_prioContext _localctx = new Exp_prioContext(_ctx, _parentState);
		Exp_prioContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_exp_prio, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(108);
			suit_exp();
			}
			_ctx.stop = _input.LT(-1);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Exp_prioContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_exp_prio);
					setState(110);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(111);
					muldiv();
					setState(112);
					suit_exp();
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PlusmoinContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(CompileParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(CompileParser.MINUS, 0); }
		public PlusmoinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plusmoin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterPlusmoin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitPlusmoin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitPlusmoin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlusmoinContext plusmoin() throws RecognitionException {
		PlusmoinContext _localctx = new PlusmoinContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_plusmoin);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MuldivContext extends ParserRuleContext {
		public TerminalNode MUL() { return getToken(CompileParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(CompileParser.DIV, 0); }
		public MuldivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_muldiv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterMuldiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitMuldiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitMuldiv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MuldivContext muldiv() throws RecognitionException {
		MuldivContext _localctx = new MuldivContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_muldiv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if ( !(_la==MUL || _la==DIV) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Suit_expContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode PARO() { return getToken(CompileParser.PARO, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode PARF() { return getToken(CompileParser.PARF, 0); }
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public Suit_expContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_suit_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).enterSuit_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompileListener ) ((CompileListener)listener).exitSuit_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompileVisitor ) return ((CompileVisitor<? extends T>)visitor).visitSuit_exp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Suit_expContext suit_exp() throws RecognitionException {
		Suit_expContext _localctx = new Suit_expContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_suit_exp);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				id();
				}
				break;
			case PARO:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(PARO);
				setState(125);
				exp(0);
				setState(126);
				match(PARF);
				}
				break;
			case INTEGERVAL:
			case FLOATVAL:
			case STR:
